<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/abc_search_url_text_normal"

    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create"
        android:textColor="@color/switch_thumb_normal_material_light"
        android:background="@color/secondary_text_default_material_light"
        android:layout_above="@+id/edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonPushed"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nutshell"
        android:layout_above="@+id/create" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit"
        android:textColor="@color/switch_thumb_normal_material_light"
        android:background="@color/secondary_text_default_material_light"
        android:layout_above="@+id/find"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonPushed"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:id="@+id/find"

        android:textColor="@color/switch_thumb_normal_material_light"
        android:background="@color/secondary_text_default_material_light"
        android:layout_above="@+id/convert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/convert"
        android:textColor="@color/switch_thumb_normal_material_light"
        android:background="@color/secondary_text_default_material_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonPushed"/>

</RelativeLayout>
