<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_deep_teal_500"
    tools:context="com.example.hushcoolcat.inanutshell.createOrParse"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_page_create"
            android:id="@+id/write"
            android:layout_marginTop="81dp"
            android:layout_marginBottom="60dp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:background="@color/secondary_text_default_material_light"
            android:layout_weight=".5"
            android:onClick="buttonPushed"/>

        <TextView
            android:layout_width="226sp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_gointernet"
            android:id="@+id/go_internet"
            android:background="@color/secondary_text_default_material_light"
            android:textColor="@color/abc_primary_text_material_dark"
            android:layout_marginBottom="94dp"
            android:layout_weight="0.4"
            android:onClick="onClick"/>

    </LinearLayout>

</RelativeLayout>
